# rust-wasm-compute-compare

./: .gitignore  BENCHMARK.md  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  style.css
js-compute/: blur.js  index.js  mandelbrot.js  matrix.js  package.json  primes.js
rust-compute/: Cargo.toml
rust-compute/src/: blur.rs  lib.rs  mandelbrot.rs  matrix.rs  primes.rs
